// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpenAPI 3 generator produces valid code multi-file: json 1`] = `
"{
  \\"openapi\\": \\"3.0.0\\",
  \\"tags\\": [
    {
      \\"name\\": \\"TODO\\"
    }
  ],
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"TODO\\",
    \\"contact\\": {
      \\"name\\": \\"TODO\\"
    }
  },
  \\"paths\\": {
    \\"/users/create\\": {
      \\"post\\": {
        \\"operationId\\": \\"createUser\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [],
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"$ref\\": \\"#/components/schemas/CreateUserRequest\\"
              }
            }
          }
        },
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"$ref\\": \\"#/components/schemas/CreateUserResponse\\"
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"description\\": \\"\\"
          }
        }
      }
    },
    \\"/users/{userId}-confirmed\\": {
      \\"delete\\": {
        \\"operationId\\": \\"deleteUser\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [
          {
            \\"in\\": \\"path\\",
            \\"name\\": \\"userId\\",
            \\"description\\": \\"TODO\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"nullable\\": true
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"403\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"message\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"signedInAs\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"message\\",
                    \\"signedInAs\\"
                  ]
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"message\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"message\\"
                  ]
                }
              }
            },
            \\"description\\": \\"\\"
          }
        }
      }
    },
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"getUsers\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [
          {
            \\"in\\": \\"query\\",
            \\"name\\": \\"limit\\",
            \\"description\\": \\"TODO\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"number\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"age\\": {
                        \\"type\\": \\"number\\"
                      }
                    },
                    \\"required\\": [
                      \\"name\\"
                    ]
                  }
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"description\\": \\"\\"
          }
        }
      }
    },
    \\"/users/{userId}\\": {
      \\"get\\": {
        \\"operationId\\": \\"getUser\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [
          {
            \\"in\\": \\"path\\",
            \\"name\\": \\"userId\\",
            \\"description\\": \\"TODO\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"age\\": {
                      \\"type\\": \\"number\\"
                    }
                  },
                  \\"required\\": [
                    \\"name\\"
                  ]
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"description\\": \\"\\"
          }
        }
      }
    }
  },
  \\"components\\": {
    \\"schemas\\": {
      \\"CreateUserRequest\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"name\\": {
            \\"type\\": \\"string\\"
          }
        },
        \\"required\\": [
          \\"name\\"
        ]
      },
      \\"CreateUserResponse\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"success\\": {
            \\"type\\": \\"boolean\\"
          }
        },
        \\"required\\": [
          \\"success\\"
        ]
      },
      \\"GetUserResponse\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"name\\": {
            \\"type\\": \\"string\\"
          }
        },
        \\"required\\": [
          \\"name\\"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator produces valid code multi-file: yaml 1`] = `
"openapi: 3.0.0
tags:
  - name: TODO
info:
  version: 0.0.0
  title: TODO
  contact:
    name: TODO
paths:
  /users/create:
    post:
      operationId: createUser
      description: TODO
      tags:
        - TODO
      parameters: []
      requestBody:
        content:
          application/json:
            schema:
              $ref: '#/components/schemas/CreateUserRequest'
      responses:
        '200':
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/CreateUserResponse'
          description: ''
        default:
          description: ''
  '/users/{userId}-confirmed':
    delete:
      operationId: deleteUser
      description: TODO
      tags:
        - TODO
      parameters:
        - in: path
          name: userId
          description: TODO
          required: true
          schema:
            type: string
      responses:
        '200':
          content:
            application/json:
              schema:
                nullable: true
          description: ''
        '403':
          content:
            application/json:
              schema:
                type: object
                properties:
                  message:
                    type: string
                  signedInAs:
                    type: string
                required:
                  - message
                  - signedInAs
          description: ''
        default:
          content:
            application/json:
              schema:
                type: object
                properties:
                  message:
                    type: string
                required:
                  - message
          description: ''
  /users:
    get:
      operationId: getUsers
      description: TODO
      tags:
        - TODO
      parameters:
        - in: query
          name: limit
          description: TODO
          required: true
          schema:
            type: number
      responses:
        '200':
          content:
            application/json:
              schema:
                type: array
                items:
                  type: object
                  properties:
                    name:
                      type: string
                    age:
                      type: number
                  required:
                    - name
          description: ''
        default:
          description: ''
  '/users/{userId}':
    get:
      operationId: getUser
      description: TODO
      tags:
        - TODO
      parameters:
        - in: path
          name: userId
          description: TODO
          required: true
          schema:
            type: string
      responses:
        '200':
          content:
            application/json:
              schema:
                type: object
                properties:
                  name:
                    type: string
                  age:
                    type: number
                required:
                  - name
          description: ''
        default:
          description: ''
components:
  schemas:
    CreateUserRequest:
      type: object
      properties:
        name:
          type: string
      required:
        - name
    CreateUserResponse:
      type: object
      properties:
        success:
          type: boolean
      required:
        - success
    GetUserResponse:
      type: object
      properties:
        name:
          type: string
      required:
        - name
"
`;

exports[`OpenAPI 3 generator produces valid code single-file: json 1`] = `
"{
  \\"openapi\\": \\"3.0.0\\",
  \\"tags\\": [
    {
      \\"name\\": \\"TODO\\"
    }
  ],
  \\"info\\": {
    \\"version\\": \\"0.0.0\\",
    \\"title\\": \\"TODO\\",
    \\"contact\\": {
      \\"name\\": \\"TODO\\"
    }
  },
  \\"paths\\": {
    \\"/users/create\\": {
      \\"post\\": {
        \\"operationId\\": \\"createUser\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [],
        \\"requestBody\\": {
          \\"content\\": {
            \\"application/json\\": {
              \\"schema\\": {
                \\"$ref\\": \\"#/components/schemas/CreateUserRequest\\"
              }
            }
          }
        },
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"$ref\\": \\"#/components/schemas/CreateUserResponse\\"
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"description\\": \\"\\"
          }
        }
      }
    },
    \\"/users\\": {
      \\"get\\": {
        \\"operationId\\": \\"getUsers\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [
          {
            \\"in\\": \\"query\\",
            \\"name\\": \\"limit\\",
            \\"description\\": \\"TODO\\",
            \\"required\\": false,
            \\"schema\\": {
              \\"type\\": \\"number\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"array\\",
                  \\"items\\": {
                    \\"type\\": \\"object\\",
                    \\"properties\\": {
                      \\"name\\": {
                        \\"type\\": \\"string\\"
                      },
                      \\"age\\": {
                        \\"type\\": \\"number\\"
                      }
                    },
                    \\"required\\": [
                      \\"name\\"
                    ]
                  }
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"description\\": \\"\\"
          }
        }
      }
    },
    \\"/users/{userId}\\": {
      \\"get\\": {
        \\"operationId\\": \\"getUser\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [
          {
            \\"in\\": \\"path\\",
            \\"name\\": \\"userId\\",
            \\"description\\": \\"TODO\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"name\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"age\\": {
                      \\"type\\": \\"number\\"
                    }
                  },
                  \\"required\\": [
                    \\"name\\"
                  ]
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"description\\": \\"\\"
          }
        }
      }
    },
    \\"/users/{userId}-confirmed\\": {
      \\"delete\\": {
        \\"operationId\\": \\"deleteUser\\",
        \\"description\\": \\"TODO\\",
        \\"tags\\": [
          \\"TODO\\"
        ],
        \\"parameters\\": [
          {
            \\"in\\": \\"path\\",
            \\"name\\": \\"userId\\",
            \\"description\\": \\"TODO\\",
            \\"required\\": true,
            \\"schema\\": {
              \\"type\\": \\"string\\"
            }
          }
        ],
        \\"responses\\": {
          \\"200\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"nullable\\": true
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"403\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"message\\": {
                      \\"type\\": \\"string\\"
                    },
                    \\"signedInAs\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"message\\",
                    \\"signedInAs\\"
                  ]
                }
              }
            },
            \\"description\\": \\"\\"
          },
          \\"default\\": {
            \\"content\\": {
              \\"application/json\\": {
                \\"schema\\": {
                  \\"type\\": \\"object\\",
                  \\"properties\\": {
                    \\"message\\": {
                      \\"type\\": \\"string\\"
                    }
                  },
                  \\"required\\": [
                    \\"message\\"
                  ]
                }
              }
            },
            \\"description\\": \\"\\"
          }
        }
      }
    }
  },
  \\"components\\": {
    \\"schemas\\": {
      \\"CreateUserRequest\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"name\\": {
            \\"type\\": \\"string\\"
          }
        },
        \\"required\\": [
          \\"name\\"
        ]
      },
      \\"CreateUserResponse\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"success\\": {
            \\"type\\": \\"boolean\\"
          }
        },
        \\"required\\": [
          \\"success\\"
        ]
      },
      \\"GetUserResponse\\": {
        \\"type\\": \\"object\\",
        \\"properties\\": {
          \\"name\\": {
            \\"type\\": \\"string\\"
          }
        },
        \\"required\\": [
          \\"name\\"
        ]
      }
    }
  }
}"
`;

exports[`OpenAPI 3 generator produces valid code single-file: yaml 1`] = `
"openapi: 3.0.0
tags:
  - name: TODO
info:
  version: 0.0.0
  title: TODO
  contact:
    name: TODO
paths:
  /users/create:
    post:
      operationId: createUser
      description: TODO
      tags:
        - TODO
      parameters: []
      requestBody:
        content:
          application/json:
            schema:
              $ref: '#/components/schemas/CreateUserRequest'
      responses:
        '200':
          content:
            application/json:
              schema:
                $ref: '#/components/schemas/CreateUserResponse'
          description: ''
        default:
          description: ''
  /users:
    get:
      operationId: getUsers
      description: TODO
      tags:
        - TODO
      parameters:
        - in: query
          name: limit
          description: TODO
          required: false
          schema:
            type: number
      responses:
        '200':
          content:
            application/json:
              schema:
                type: array
                items:
                  type: object
                  properties:
                    name:
                      type: string
                    age:
                      type: number
                  required:
                    - name
          description: ''
        default:
          description: ''
  '/users/{userId}':
    get:
      operationId: getUser
      description: TODO
      tags:
        - TODO
      parameters:
        - in: path
          name: userId
          description: TODO
          required: true
          schema:
            type: string
      responses:
        '200':
          content:
            application/json:
              schema:
                type: object
                properties:
                  name:
                    type: string
                  age:
                    type: number
                required:
                  - name
          description: ''
        default:
          description: ''
  '/users/{userId}-confirmed':
    delete:
      operationId: deleteUser
      description: TODO
      tags:
        - TODO
      parameters:
        - in: path
          name: userId
          description: TODO
          required: true
          schema:
            type: string
      responses:
        '200':
          content:
            application/json:
              schema:
                nullable: true
          description: ''
        '403':
          content:
            application/json:
              schema:
                type: object
                properties:
                  message:
                    type: string
                  signedInAs:
                    type: string
                required:
                  - message
                  - signedInAs
          description: ''
        default:
          content:
            application/json:
              schema:
                type: object
                properties:
                  message:
                    type: string
                required:
                  - message
          description: ''
components:
  schemas:
    CreateUserRequest:
      type: object
      properties:
        name:
          type: string
      required:
        - name
    CreateUserResponse:
      type: object
      properties:
        success:
          type: boolean
      required:
        - success
    GetUserResponse:
      type: object
      properties:
        name:
          type: string
      required:
        - name
"
`;
